test/fail/entity-prop-liststring.app
//Expected: collection of Entity types. Encountered: List<String>
application test

entity Test{
  test -> List<String>
}

define page root() {
}
